# spdlogMake

./: CMakeLists.txt  Readme.md  main.cpp  run.sh
include/: Logger.cpp  Logger.hpp
spd/: spdlog.hpp
